Don't use deprecated Float constructors.
Change-Id: I841703412d611b552b4cd9cf49b8730708f6f623
Reviewed-on: https://git.eclipse.org/r/c/platform/eclipse.platform.images/+/190610
Tested-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-by: Alexander Kurtakov <akurtako@redhat.com>